--- a/kitti_data_demo.ipynb
+++ b/kitti_data_demo.ipynb
@@ -1,21 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "ae9abd69",
-   "metadata": {},
-   "source": [
-    "https://github.com/utiasSTARS/pykitti/blob/master/pykitti/odometry.py\n",
-    "\n",
-    "https://zhuanlan.zhihu.com/p/493026799"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "dbded459",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "4a92b9f5",
    "metadata": {},
    "outputs": [],
@@ -47,12 +47,13 @@
     "ROOT_DIR = \"/home/work/github/calibration/sensor-calibration/datas/kitti-odometry/sequences/00\"\n",
     "IMG = ROOT_DIR + \"/image_2/000001.png\"\n",
     "PCD = ROOT_DIR + \"/velodyne/000001.bin\"\n",
-    "CALIB_FILE1 = ROOT_DIR + \"/calib.txt\""
+    "CALIB_FILE1 = ROOT_DIR + \"/calib.txt\"\n",
+    "# D_02: -3.691481e-01 1.968681e-01 1.353473e-03 5.677587e-04 -6.770705e-02"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "52fea5ee",
    "metadata": {},
    "outputs": [
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "175add8b",
    "metadata": {},
    "outputs": [
@@ -144,7 +145,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
+   "id": "3dc0c275",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1241, 376)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "0def0f19",
    "metadata": {},
    "outputs": [
